k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-app
  namespace: ticket-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticket-app
  template:
    metadata:
      labels:
        app: ticket-app
    spec:
      containers:
      - name: ticket-web
        image: your-docker-username/ticket-app:latest # Rename this to your Hub repo
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: ticket-app-ns
spec:
  selector:
    matchLabels:
      app: ticket-db
  template:
    metadata:
      labels:
        app: ticket-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        # Inside your ticket-app deployment section
