k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: ticket-app-ns
spec:
  type: NodePort
  selector:
    app: ticket-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007 # The 'Public Door' for your EC2
---
apiVersion: v1
kind: Service
metadata:
  name: db-service # This MUST match DB_HOST in your configmap
  namespace: ticket-app-ns
spec:
  selector:
    app: ticket-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
